# synalinks-memory-cli

./: README.md  pyproject.toml
synalinks_memory_cli/: __init__.py  main.py  mcp_server.py  version.py
