[project]
name = "synalinks-memory-cli"
dynamic = ["version"]
description = "CLI for the Synalinks Memory API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "synalinks-memory>=0.0.002",
    "click>=8.1",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = true


[tool.hatch.version]
path = "synalinks_memory_cli/version.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
synalinks-memory-cli = "synalinks_memory_cli.main:cli"
